# ComputerCraft

./: .gitignore  .gitmodules  build.sh  consume_concrete.lua  dig_area.lua  new_dig.lua  position.lua  remote_lock_door.lua  remote_lock_key.lua  save_system_test_example.lua
cfa/: cfa.lua  disassembler.lua  expression_metatable.lua  instructions.md  interp.lua
cfa/examples/: basic.lua  closure_test.lua  if_statement.lua  metaprogramming.lua  save_system_test.lua
cfa/save_systems/: basic_lua.lua  mock.lua  save_log.lua
dig_area/: Cargo.toml
dig_area/src/: lib.rs  movement.rs
