[package]
name = "dig_area"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
walp_rs = {path = "../walp/common_bindings/rust"}

[profile.release]
lto = "thin"
opt-level = "z"
